# lightning-mesh

./: .dockerignore  .gitignore  AGENTS.md  CLA.md  CLAUDE.md  COMMERCIAL-LICENSE.md  CONTRIBUTING.md  Cargo.toml  NOTICE  README.md  package.json
.beads/: README.md  issues.jsonl  metadata.json
.design/fleet-admin/: INFORMATION_ARCHITECTURE.md
.github/workflows/: ci.yml  cla.yml
crates/mjolnir-audio/: Cargo.toml  README.md
crates/mjolnir-hello/: .gitignore
crates/mjolnir-media/: README.md
crates/mjolnir-mesh/: Cargo.toml
crates/mjolnir-mesh/src/: alloc.rs  claim_cooldown.rs  dns_conformance_tests.rs  dns_responder.rs  lib.rs  radio.rs  roster.rs
crates/mjolnir-mesh/src/babel/: config.rs  mod.rs
crates/mjolnir-mesh/src/crdt/: dns.rs  egress.rs  gossip.rs  hlc.rs  lease.rs  leased_name.rs  liveness.rs  merge.rs  mod.rs  node_name.rs  peer_addr.rs  service.rs  service_apply.rs  subnet.rs  sync.rs
crates/mjolnir-mesh/src/tun/: encap.rs  fib.rs  iface.rs  link.rs  mod.rs  overlay.rs
crates/mjolnir-mesh/tests/: babel_pipeline.rs  service_mesh_convergence.rs  two_site_netns.rs
crates/mjolnir-meshctl/: Cargo.toml
crates/mjolnir-node/: Cargo.toml
deploy/mikrotik/: 4-node-lan-bringup.md  Dockerfile  build.sh  client-routing.rsc  container-net-lan.rsc  container-net.rsc  repack-docker-archive.sh  routers.toml
deploy/observability/: vector.toml
deploy/openwrt/: README.md  build.sh  fleet-nodes.conf  install-node.sh  seed-names.sh  setup-wireless.sh
docs/: mesh-network-coordination.md  prd-mesh-naming-first-stone.md
docs/architecture/: dhcp-crdt.md  dnsmasq-integration.md  (+3 more)
hello-mesh-web/: package.json
spike/: buw-multicast-spike.sh  buw-overlay-2node.sh  buw-overlay-fleet-validate.sh  buw-overlay-smoke.sh
src/: config.ts  index.ts  logger.ts  types.ts
(+158 files in other folders)
