[workspace]
members = ["crates/*"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"

[workspace.dependencies]
# iroh networking
iroh = "1.0"
iroh-gossip = "0.101"

# async runtime
tokio = { version = "1", features = ["full"] }

# serialization
postcard = { version = "1", features = ["alloc"] }
serde = { version = "1", features = ["derive"] }

# encoding
data-encoding = "2"
rand = "0.9"

# network types
ipnet = { version = "2", features = ["serde"] }

# utilities
blake3 = "1"
thiserror = "2"
futures-lite = "2"
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
clap = { version = "4", features = ["derive"] }
bytes = "1"

# meshctl operator tool (host-native; not built into the container image)
toml = "0.8"
