[package]
name = "mjolnir-mesh"
description = "mjolnir-mesh: networking library for the mesh substrate (CRDT, gossip, Babel integration)"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
serde.workspace = true
postcard.workspace = true
ipnet = { workspace = true }
blake3.workspace = true
thiserror.workspace = true

[dev-dependencies]
tokio = { workspace = true }

[target.'cfg(target_os = "linux")'.dependencies]
rtnetlink = "0.21"
tun = "0.8"
tokio.workspace = true
